resolve some linter warnings